syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package goods.service.v1;


option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service Goods {
  rpc GoodsDetail(GoodsReq) returns (GoodsRes) {
    option (google.api.http) = {
      get: "/goods/detail"
    };
  };
}

message GoodsReq {
  string Id = 1 [(gogoproto.moretags) = 'form:"id" validate:"required"'];
}

message GoodsRes {
  string GoodsName = 1 [(gogoproto.jsontag) = 'goodsName'];
}
